# libgamerzilla

./: CMakeLists.txt  LICENSE  README  gamerzilla.c  gamerzilla.h  gamerzilla.pc.cmakein  gamerzilla.vapi  gamerzillaserver.c  gamerzillatest.c  libgamerzilla.spec  mingw-libgamerzilla.spec
html/: common.css  developers.html  godot.html  index.html  launchers.html  sourcecode.html
